--- a/arbeidskrav1-oppgavemappe/game.html
+++ b/arbeidskrav1-oppgavemappe/game.html
@@ -83,17 +83,17 @@
         },
         {
           id: 1,
-          name: "Ariana archer",
-          maxHP: 500,
-          currentHP: 500,
+          name: "Ariana Archer",
+          maxHP: 600,
+          currentHP: 600,
           damage: 400,
           alive: true,
         },
         {
           id: 2,
           name: "Wyona Warrior",
-          maxHP: 600,
-          currentHP: 600,
+          maxHP: 800,
+          currentHP: 800,
           damage: 400,
           alive: true,
         },
