Henter healthtxt, og bruker let, da currentHP skal oppdateres

--- a/arbeidskrav1-oppgavemappe/game.html
+++ b/arbeidskrav1-oppgavemappe/game.html
@@ -106,6 +106,12 @@
         damage: 200,
         alive: true,
       };
+
+      //henter healthtxt fra heroes og dragon
+      let healerHealthTxt = document.getElementById("healer-health-txt");
+      let archerHealthTxt = document.getElementById("archer-health-txt");
+      let warriorHealthTxt = document.getElementById("warrior-health-txt");
+      let dragonHealthTxt = document.querySelector(".dragon-health-txt");
     </script>
   </body>
 </html>
