Laget if setning til de andre heltene, basert på angrep fra dragen og minus skade dragen har gjort på helten som blir tilfeldig valgt ut

--- a/arbeidskrav1-oppgavemappe/game.html
+++ b/arbeidskrav1-oppgavemappe/game.html
@@ -200,6 +200,24 @@
           hero.alive = false;
           console.log(`${hero.alive}`);
         }
+
+        if (hero.name == "Ariana Archer" && hero.currentHP > 0 && hero.alive) {
+          healerHealthTxt.innerHTML = `${hero.maxHP} / ${hero.currentHP} HP`;
+        } else if (hero.name == "Ariana Archer" && hero.currentHP <= 0 && hero.alive) {
+          healerHealthTxt.innerHTML = `${hero.maxHP} / ${hero.currentHP} HP`;
+          alert("er død");
+          hero.alive = false;
+          console.log(`${hero.alive}`);
+        }
+
+        if (hero.name == "Wyona Warrior" && hero.currentHP > 0 && hero.alive) {
+          healerHealthTxt.innerHTML = `${hero.maxHP} / ${hero.currentHP} HP`;
+        } else if (hero.name == "Wyona Warrior" && hero.currentHP <= 0 && hero.alive) {
+          healerHealthTxt.innerHTML = `${hero.maxHP} / ${hero.currentHP} HP`;
+          alert("er død");
+          hero.alive = false;
+          console.log(`${hero.alive}`);
+        }
       } 
     </script>
   </body>
