--- a/arbeidskrav1-oppgavemappe/game.html
+++ b/arbeidskrav1-oppgavemappe/game.html
@@ -86,7 +86,7 @@
           name: "Ariana Archer",
           maxHP: 600,
           currentHP: 600,
-          damage: 400,
+          damage: 200,
           alive: true,
         },
         {
@@ -117,7 +117,7 @@
 
       //healer
       //starter med å hente bilde
-      const healer = document.querySelector(".healer");
+      let healer = document.querySelector(".healer");
 
       //legger til en eventlistener og lager et parameter for å sende videre til function healerimage
       healer.addEventListener("click", healerImage);
@@ -136,7 +136,7 @@
       }
 
       //archer
-      const archer = document.querySelector(".archer");
+      let archer = document.querySelector(".archer");
 
       archer.addEventListener("click", archerImage);
 
@@ -153,12 +153,12 @@
       }
 
       //warrior
-      const warrior = document.querySelector(".warrior");
+      let warrior = document.querySelector(".warrior");
 
       warrior.addEventListener("click", warriorImage);
 
       function warriorImage() {
-        const warriorDamage = heroesArray[1].damage;
+        const warriorDamage = heroesArray[2].damage;
 
         dragonObject.currentHP -= warriorDamage;
 
@@ -180,8 +180,10 @@
           createHeroCard(aliveHeroes[randomHero]);
         } else if (aliveHeroes.length === 0 && dragonObject.currentHP > 0) {
           alert("spillet er over");
-        } else if (aliveHeroes.length > 0 && dragonObject.currentHP === 0) {
+          console.log("over");
+        } else if (aliveHeroes.length > 0 && dragonObject.currentHP <= 0) {
           alert("Heltene har vunnet");
+          console.log("vunnet");
         }
       }
 
@@ -199,6 +201,7 @@
           alert("er død");
           hero.alive = false;
           console.log(`${hero.alive}`);
+          healer.remove();
         }
 
         if (hero.name == "Ariana Archer" && hero.currentHP > 0 && hero.alive) {
@@ -208,6 +211,7 @@
           alert("er død");
           hero.alive = false;
           console.log(`${hero.alive}`);
+          archer.remove();
         }
 
         if (hero.name == "Wyona Warrior" && hero.currentHP > 0 && hero.alive) {
@@ -219,6 +223,7 @@
           alert("er død");
           hero.alive = false;
           console.log(`${hero.alive}`);
+          warrior.remove();
         }
       } 
     </script>
